--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
           "Transform Your Cotton Farming: Discover Our Innovative Cotton Disease Detection Technology for Better Crop Health and Higher Yields. <br> Start Your Journey to Sustainable Cotton Farming Today."
         </p>
         <a href="#ditect" class="btn bg-[#8cd200] text-white mt-5">Detect Now</a>
-        <img class="w-[60%] rounded-md mt-6" src="../static/cover.webp" alt="Cotton Farming">
+        <img class="w-[60%] rounded-md mt-6" src="../static/topv2.jpg" alt="Cotton Farming">
       </div>
     </div>
   </div>
@@ -69,7 +69,7 @@
         </form>
         </div>
         <div class="flex-1 flex items-center justify-center">
-          <img src="../static/mid.webp" class="w-full rounded-md flex-1" alt="">
+          <img src="../static/mid.jpg" class="w-[70%] rounded-md flex-1" alt="">
         </div>
         
       </div>
